<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello socialone-android!</string>
    <string name="app_name">SocialOne Beta</string>
    <string name="app_id">1395812680657016</string>
    <string name="critter_id">5276171197c8f2351e000001</string>
    <string name="furry_id">XKDQSB8WT6DX8QG373WM</string>
    <string name="quantcast_id">03ez3rc2lmzis9aw-yac9begxah8mxb0z</string>
    <string name="bugsense_id">775dd938</string>
    <string name="amazon_key">e1d631df30894e94a2d6894228b5198c</string>
    <string name="amazon_private_key">1CPLfjD5xGff6xJsd8uwHOb4P++3va8lOeQvEEaBg0U=</string>
    <string name="mixpanel_key">38af33940057c9b49fcdeda17a3ad860</string>
    <string name="px_consumer_key">kSzNAalzN2gYE0FYXam2Q4i2rCHEoEzdNlQlE8PD</string>
    <string name="px_consumer_secret">A7UzErJdSOo99IQuTJhhYZbFEZn6KbySaF9RbUF7</string>
    <string name="flickr_key">87d0ccf46bf73b10709e03d78edb0d25</string>
    <string name="flickr_secret">5d1ee0b6ac5c67e9</string>
    <string name="version_dynamic">v %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google+</string>
    <string name="four_square">Foursquare</string>
    <string name="app_net">App.net</string>
    <string name="myspace">Myspace</string>
    <string name="instagram">Instagram</string>
    <string name="tumblr">Tumblr</string>
    <string name="linkedin">Linkedin</string>
    <string name="flickr">Flickr</string>
    <string name="five_px">500px</string>

    <string name="fragment_share">Share</string>
    <string name="fragment_check">Check-In</string>

    <string name="connect_accounts_header">Welcome to SocialOne!</string>
    <string name="connect_accounts_info">Connect your social accounts to get started!</string>
    <string name="connect_accounts_finish">Tap done at the top to complete connecting your accounts!</string>
    <string name="share_networks_header">Where to Share</string>
    <string name="share_details_header">Sharing Details</string>
    <string name="share_details_text_hint">What\'s on your mind?</string>
    <string name="share_details_add_link_text">Add link</string>
    <string name="share_details_add_image_text">Add image</string>
    <string name="share_details_add_location">Add Location</string>

    <string name="settings_header_text">Connected Social Networks</string>

    <string name="app_net_coming_soon_message">App.net support is coming soon! If you\'d like to see support quicker, make sure to vote for it!</string>
    <string name="dialog_alright">Not right now</string>
    <string name="dialog_vote">Take me there!</string>

    <string name="just_now">Just now!</string>

    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>

    <string name="pay.me.response.ok">OK</string>
    <string name="pay.me.response.user_canceled">User Canceled</string>
    <string name="pay.me.response.billing_unavailable">Billing Unavailable</string>
    <string name="pay.me.response.item_unavailable">Item Unavailable</string>
    <string name="pay.me.response.developer_error">Developer error</string>
    <string name="pay.me.response.error">Error</string>
    <string name="pay.me.response.item_already_owned">Item already owned</string>
    <string name="pay.me.response.item_not_owned">Item already owned</string>


    <string name="pay.me.response.remote_exception">Remote exception during initialization</string>
    <string name="pay.me.response.bad_response">Bad response received</string>
    <string name="pay.me.response.signature_verification_failed">Purchase signature verification failed</string>
    <string name="pay.me.response.send_intent_failed">Send intent failed</string>
    <string name="pay.me.response.unknown_purchase_response">Unknown purchase response</string>
    <string name="pay.me.response.missing_token">Missing token</string>
    <string name="pay.me.response.unknown_error">Unknown error</string>
    <string name="pay.me.response.subscriptions_not_available">Subscriptions not available</string>
    <string name="pay.me.response.invalid_consumption">Invalid consumption attempt</string>
    <string name="pay.me.response.disposed">The helper was already disposed of</string>
</resources>
